# ComfyUI-FL-PRXPixel

./: .comfyignore  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example workflow/: PRXpixel.json
modules/: __init__.py  image_utils.py  loader.py  model_info.py  resolution.py
nodes/: __init__.py  generate.py  model_loader.py
tests/: prxpixel_comfy_api_e2e.py  prxpixel_standalone_smoke.py
